// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npm install should invoke npm 1`] = `
Array [
  Array [
    Array [
      "sl-dummy-package@2.0.0",
    ],
    [Function],
  ],
]
`;

exports[`npm rebuild should invoke npm 1`] = `
Array [
  Array [
    Array [],
    [Function],
  ],
]
`;
